<resources>
    <string name="app_name">To Do List</string>
    <string name="label_new_task">Criar tarefa</string>
    <string name="label_title">Título</string>
    <string name="label_date">Data</string>
    <string name="label_time">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_description_new_task">Nova tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_no_tasks_found">Ops! Você não possui \nnenhuma tarefa</string>
</resources>